# lcms2.rs

./: .gitignore  Cargo.toml
src/: consts.rs  inlines.rs  lib.rs  list.rs  sig.rs
src/cms/: mod.rs  plugin.rs
src/io/: file.rs  io_handler.rs  mem.rs  mod.rs  null.rs
src/plugin/: bit_converter.rs  formatter.rs  interp.rs  mod.rs  mpe.rs  mutex.rs  optimization.rs  parallel.rs  parametric_curve.rs  rendering_intent.rs  tag.rs  tag_type.rs  transform.rs
src/plugin/functions/: mod.rs
src/plugin/tag_type/: chromaticity.rs  colorant_order_type.rs  data.rs  functions.rs  mod.rs  s15_fixed16.rs  signature.rs  text.rs  text_description.rs  u16_fixed16.rs  xyz.rs
src/state/: context.rs  error.rs  mod.rs
src/state/plugin/: mod.rs
src/types/: data.rs  date_time.rs  dictionary.rs  dup.rs  interp_params.rs  jch.rs  lab.rs  lch.rs  mat3.rs  measurement_conditions.rs  mod.rs  named_color.rs  profile.rs  profile_id.rs  screening.rs  seq.rs  signature.rs  tag.rs  tone_curve.rs  transform.rs  ucr_bg.rs  vec3.rs  video_signal_type.rs  viewing_conditions.rs  xyy.rs  xyz.rs
src/types/curve_segment/: mod.rs
src/types/mlu/: mod.rs
src/types/pipeline/: mod.rs
src/types/pipeline/stage/: clut.rs  matrix.rs  mod.rs  tone_curve.rs
src/types/tag/: directory.rs
src/types/viewing_conditions/: cam02.rs
