[package]
authors = ["Stefan Kewatt <stefan.kewatt@gmail.com>"]
name = "lcms2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
log = "0.4.20"
pool = "0.1.4"
byteorder = "1.5.0"
encoding_rs = "0.8.33"
codepage = "0.1.1"
chrono = "0.4.31"
